# MPI_Wrapper

./: CMakeLists.txt  Client.cpp  Client.h  ClientTest.cpp  MPI_Client.cpp  MPI_Client.h  MPI_Connect_Wrapper.cpp  MPI_Connect_Wrapper.h  MPI_Server.cpp  MPI_Server.h  MPI_util.h  ServerTest.cpp  main.cpp  msg_handlerABC.h
